<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Still Waiting</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="billTextView">Bill</string>
    <string name="billEditText">0.00</string>
    <string name="tipAmountText">Tip</string>
    <string name="adjustTipTextView">Adjust Tip</string>
    <string name="percentSign">%</string>
    <string name="finalBillText">Final Bill</string>
    <string name="waitressScore">Score: </string>
    <string name="waitressScoreNum">0.0</string>
    <string name="addWaiterInfo">Add Waiter</string>
    <string name="resetAll">Reset All</string>
    <string name="title_activity_starter">Launch App</string>
    <string name="find_server_bttn">Find a Server</string>
    <string name="tip_cal_bttn">Use Tip Calculator</string>
    <string name="title_activity_add_restaurant">Select Restaurant</string>
    <string name="addRestaurantNameBttn">Add Restaurant</string>
    <string name="title_activity_add_location">Add Location</string>
    <string name="addLocationBttn">Add Location</string>
    <string name="dialogText">Enter Restaurant Name</string>
    <string name="title_activity_add_server">Add Server</string>
    <string name="addServerBttn">Add Server</string>
    <string name="server_name">Server Name</string>
    <string name="server_score_label">Server Score: </string>
    <string name="serverNotesTextbox">Enter Server Notes</string>
    <string name="addNotesBttn">Add Notes</string>
    <string name="delete_address_dialog">WARNING: This will delete all information associated
    with this restaurant!</string>
    <string name="set_delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="delete_restaurant_dialog_title">Delete Restaurant</string>
    <string name="add_restaurant_dialog_title">Add Restaurant</string>
    <string name="enter">Enter</string>
    <string name="menu_home_button">Home Page</string>
    <string name="menu_tip_calculator">Tip Calculator</string>
    <string name="dialog_title_delete_location">Delete Location</string>
    <string name="dialog_message_delete_location">WARNING: This location will be deleted for all
    restaurants!</string>
    <string name="dialog_title_delete_server">Delete Server</string>
    <string name="dialog_mssage_delete_server">WARNING: You will permanently delete this server!</string>
    <string name="split_amount_textView">Split</string>
    <string name="split_total_textView">Split Total</string>
    <string name="split_total_amount_textView">0.00</string>


</resources>
