<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:id="@+id/linearLayout"
        android:weightSum="1">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billTextView"
                android:id="@+id/billTextView"
                android:layout_marginEnd="5dp"/>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/billEditText"
                android:text="@string/billEditText"
                android:inputType="numberDecimal"
                android:ems="4"
                android:textSize="20sp"
                android:selectAllOnFocus="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tipAmountText"
                android:id="@+id/tipTextView"
                android:layout_marginStart="77dp"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/billEditText"
                android:id="@+id/tipAmountTextView"
                android:textSize="20sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adjustTipTextView"
                android:id="@+id/adjustTipTextView"
                android:ems="4" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="15"
                android:id="@+id/tipPercentTextView" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/percentSign"
                android:id="@+id/percentTextView" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <SeekBar
                android:id="@+id/tipSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/adjustTipTextView"
                android:layout_centerHorizontal="true"
                android:focusableInTouchMode="true"
                android:progress="15" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finalBillText"
                android:id="@+id/finalBillTextView"
                android:layout_marginEnd="5dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="0.00"
                android:id="@+id/finalBillAmountTextView"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_name"
                    android:id="@+id/serverNameTextView" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/server_score_label"
                    android:id="@+id/scoreLabelTextView" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0.0    "
                    android:layout_marginStart="7dp"
                    android:id="@+id/serverScoreTextView" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="279dp"
            android:orientation="vertical"
            android:textAlignment="gravity"
            android:layout_weight="0.11"
            android:weightSum="45">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="226dp"
                android:inputType="textMultiLine"
                android:id="@+id/serverNotesDisplayEditText"
                android:textSize="14sp"
                android:background="#181818"
                android:gravity="top"
                android:hint="@string/serverNotesTextbox"
                android:layout_weight="1" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:gravity="bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resetAll"
            android:layout_weight="1"
            android:id="@+id/resetAllBttn" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addNotesBttn"
            android:layout_weight="1"
            android:id="@+id/addNotesBttn" />

    </LinearLayout>

</RelativeLayout>
